--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -6,3 +6,186 @@
   width: 100%;
   height: 100%;
 }
+.carousel-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  max-width: 910px;
+  margin: 0 -2%;
+}
+.carousel {
+  overflow-x: hidden;
+  white-space: nowrap;
+  width: 100%;
+}
+.carousel-wrapper {
+  width: 100%;
+  user-select: none;
+}
+.arrow-container {
+  width: 450px;
+  top: 88px;
+}
+.slide {
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 2rem;
+  padding-bottom: 10%;
+  white-space: normal;
+}
+.slide-contents {
+  margin: 0;
+}
+.header {
+  margin: 20px auto 0 auto;
+  font-size: 2.5rem;
+  font-weight: 400;
+}
+.technologies-container,
+.description {
+  text-align: left;
+  white-space: normal;
+}
+.description {
+  font-size: 1.1rem;
+  font-weight: 200;
+  padding: 10px;
+}
+figure.image-container {
+  width: 90%;
+  height: 100%;
+  white-space: normal;
+  margin: 10px auto;
+}
+.image {
+  width: 100%;
+  max-width: 810px;
+  height: 60.4vw;
+  max-height: 530px;
+}
+.title {
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+.details {
+  font-size: 1.1rem;
+}
+.title-icon {
+  margin: 0 0 5px 0;
+}
+.project-link-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  white-space: wrap;
+  width: 300px;
+  margin-top: 20px;
+  z-index: 15;
+}
+.link-figure {
+  margin: 0;
+}
+.project-link {
+  text-decoration: none;
+  color: black;
+  font-size: 1rem;
+  width: 50%;
+}
+.project-link:hover {
+  color: blue;
+}
+.arrow-container {
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  top: 77px;
+  width: 84%;
+  max-width: 810px;
+  z-index: 21;
+}
+.arrow {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.back-arrow,
+.next-arrow {
+  color: black;
+}
+.back,
+.next,
+.back-hover,
+.next-hover {
+  position: absolute;
+  transition: 0.3s ease;
+  font-size: 3rem;
+  font-weight: 200;
+  user-select: none;
+}
+.back-hover,
+.next-hover {
+  opacity: 0;
+}
+.internet {
+  width: 28px;
+  height: 28px;
+  margin-bottom: 6px;
+}
+.repository {
+  width: 30px;
+  height: 30px;
+}
+@media (hover: hover) {
+  .arrow:hover .back {
+    opacity: 0.3;
+  }
+  .arrow:hover .next {
+    opacity: 0.3;
+  }
+  .arrow:hover .back-hover {
+    padding-right: 70px;
+    opacity: 1;
+  }
+  .arrow:hover .next-hover {
+    padding-left: 70px;
+    opacity: 1;
+  }
+}
+@media only screen and (max-width: 320px) {
+  .header {
+    font-size: 1.25rem;
+    margin-bottom: 0;
+    line-height: 1;
+  }
+  .back,
+  .back-hover,
+  .next,
+  .next-hover {
+    height: 100%;
+    font-size: 22px;
+    line-height: 1;
+  }
+}
+@media only screen and (min-width: 321px) and (max-width: 667px) {
+  .header {
+    font-size: 6vw;
+    margin-bottom: 0;
+    line-height: 1;
+  }
+  .back,
+  .back-hover,
+  .next,
+  .next-hover {
+    height: 100%;
+    font-size: 7vw;
+    line-height: 1;
+  }
+}
