--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -71,7 +71,7 @@
 .skills-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   text-align: center;
   width: 100%;
   max-width: 1200px;
@@ -201,6 +201,7 @@
   .figure-container {
     border-bottom-left-radius: 0;
     width: 100%;
+    max-width: 550px;
   }
 }
 @media only screen and (min-width: 569px) and (max-width: 1200px) {
@@ -246,7 +247,10 @@
     left: 0;
   }
   .skills-container {
-    max-width: 900px;
+    max-width: 650px;
+  }
+  .figure {
+    width: 94px;
   }
 }
 @media only screen and (min-width: 1201px) {
