--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -26,13 +26,16 @@
   max-width: 250px;
 }
 .about-summary {
-  width: 50%;
-  min-width: 250px;
-  max-width: 500px;
-  margin-top: 20px;
-  background: white;
-  border-radius: 20px;
-  padding: 10px;
+  position: relative;
+  font-size: 1.25rem;
+  line-height: 1.3;
+  background: mediumseagreen;
+  color: white;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
+  padding: 15px;
 }
 .profile {
   height: 200px;
@@ -53,13 +56,6 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-}
-.about-summary {
-  white-space: normal;
-  width: 80%;
-  min-width: 200px;
-  text-align: start;
-  margin-top: 0px;
 }
 .skills-wrapper {
   display: flex;
@@ -135,27 +131,15 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 100%;
+    max-width: 549px;
     margin-top: 200px;
   }
   .about-summary {
-    position: absolute;
-    bottom: 550px;
-    background: mediumseagreen;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    -webkit-box-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
-    box-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
-    font-size: 1.25rem;
-    color: white;
-    line-height: 1.3;
-    max-width: 300px;
-    padding: 15px;
     position: relative;
+    min-width: 270px;
+    max-width: 270px;
+    bottom: 550px;
     margin-bottom: -550px;
-  }
-  .about-description {
-    font-size: 1.1rem;
   }
   .speech-arrow {
     border-right: 21px solid transparent;
@@ -205,20 +189,11 @@
   }
 }
 @media only screen and (min-width: 569px) and (max-width: 1200px) {
+  .about-section {
+    max-width: 1200px;
+  }
   .about-summary {
-    background: mediumseagreen;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    border-bottom-left-radius: 4px;
-    -webkit-box-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
-    box-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
-    font-size: 1.25rem;
-    color: white;
-    line-height: 1.3;
-    margin: 0;
     max-width: 270px;
-    padding: 15px;
-    position: relative;
   }
   .profile-figure {
     margin: 100px 0 0 0;
@@ -255,19 +230,8 @@
 }
 @media only screen and (min-width: 1201px) {
   .about-summary {
-    background: mediumseagreen;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    border-bottom-left-radius: 4px;
-    -webkit-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.2);
-    box-shadow: 0 3px 0 rgba(0, 0, 0, 0.2);
     font-size: 1.5rem;
-    color: white;
-    line-height: 1.3;
-    margin: 0;
-    max-width: 550px;
-    padding: 15px;
-    position: relative;
+    width: 550px;
   }
   .profile-figure {
     margin: 50px 0 0 0;
