--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -144,21 +144,66 @@
   flex-direction: column;
   text-align: center;
 }
-.section-two-header {
-  font-size: 2rem;
-  font-weight: 200;
-  margin: 15px 0 0 0;
+h1.section-two-header {
+  font-size: 36px;
+  font-weight: 600;
+  margin: 15px 0 1vw 0;
 }
 .static-wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  margin-top: 20px;
 }
 .static-container {
   margin: 3vw 0px 1.5vw 0;
 }
+.static-holder {
+  display: flex;
+  flex-direction: column;
+}
+.static-overlay {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  opacity: 0;
+  transition: 0.2s ease-in-out;
+  z-index: 4;
+}
+.static-link {
+  width: 35%;
+  background: white;
+  color: black;
+  font-size: 2.8vw;
+  text-decoration: none;
+  margin: 2.5vw 0;
+  border-radius: 2vw;
+  padding: 1.5vw 0;
+  box-shadow: 0 0.25vw 0.5vw 0 rgba(0, 0, 0, 0.5);
+  transition: 0.2s ease-in-out;
+}
+.static-link a {
+  text-decoration: none;
+}
 .static {
   height: 60vw;
+  transition: 0.2s ease-in-out;
+  z-index: 2;
+}
+@media (hover: hover) {
+  .static-container:hover .static {
+    opacity: 0.5;
+  }
+  .static-container:hover .static-overlay {
+    opacity: 1;
+  }
+  .static-link:hover {
+    background: rgb(0, 0, 75);
+    color: white;
+  }
 }
 @media only screen and (max-width: 768px) {
   .speech-arrow {
@@ -179,6 +224,20 @@
   .figure-container {
     max-width: 664px;
     font-size: 0.75rem;
+  }
+  .static-overlay {
+    top: 64.7vw;
+    height: 60vw;
+    margin-top: -64.7vw;
+  }
+  .static-container {
+    margin: 6vw 0;
+  }
+  .static-header {
+    font-size: 27px;
+  }
+  .static-link {
+    border-radius: 30px;
   }
 }
 @media only screen and (min-width: 769px) and (max-width: 1199px) {
@@ -202,8 +261,24 @@
     width: 94px;
     margin: 0 2.222vw;
   }
+  .static-overlay {
+    top: 32.2vw;
+    height: 29vw;
+    margin-top: -32.2vw;
+  }
+  .static-header {
+    font-size: 27px;
+    margin: 0;
+  }
+  .static-link {
+    width: 38%;
+    font-size: 1.5vw;
+    margin: 1.5vw 0;
+    padding: 0.7vw 0;
+  }
   .static {
     height: 29vw;
+    margin-bottom: 30px;
   }
 }
 @media only screen and (min-width: 1200px) {
@@ -231,10 +306,28 @@
     display: flex;
     flex-wrap: nowrap;
   }
+  h1.section-two-header {
+    margin: 15px 0 2vw 0;
+  }
   .static-container {
-    margin: 30px 0;
+    margin: 0 0 30px 0;
+  }
+  .static-overlay {
+    top: 17vw;
+    height: 15.25vw;
+    margin-top: -17vw;
+  }
+  .static-header {
+    font-size: 27px;
   }
   .static {
     height: 15.25vw;
+    margin: 1px 0 50px 0;
+  }
+  .static-link {
+    width: 180px;
+    font-size: 16px;
+    margin: 0.75vw 0;
+    padding: 0.5vw 0;
   }
 }
