--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -157,6 +157,7 @@ h1.section-two-header {
 }
 .static-container {
   margin: 3vw 0px 1.5vw 0;
+  pointer-events: none;
 }
 .static-holder {
   display: flex;
@@ -171,7 +172,10 @@ h1.section-two-header {
   width: 100%;
   opacity: 0;
   z-index: 4;
+  overflow-x: hidden;
   transition: opacity 0.2s;
+  -webkit-transition: opacity 0.2s;
+  -moz-transition: opacity 0.2s;
 }
 .static-link {
   width: 35%;
@@ -183,7 +187,19 @@ h1.section-two-header {
   border-radius: 2vw;
   padding: 1.5vw 0;
   box-shadow: 0 0.25vw 0.5vw 0 rgba(0, 0, 0, 0.5);
-  transition: 0.2s ease all;
+  pointer-events: all;
+}
+.static-deployment {
+  transform: translateX(-200%);
+  transition: transform 0.3s ease, background-color 0.2s, color 0.2s;
+  -webkit-transition: transform 0.3s ease, background-color 0.2s, color 0.2s;
+  -moz-transition: transform 0.3s ease, background-color 0.2s, color 0.2s;
+}
+.static-repository {
+  transform: translateX(200%);
+  transition: transform 0.3s ease, background-color 0.2s, color 0.2s;
+  -webkit-transition: transform 0.3s ease, background-color 0.2s, color 0.2s;
+  -moz-transition: transform 0.3s ease, background-color 0.2s, color 0.2s;
 }
 .static-link a {
   text-decoration: none;
@@ -194,7 +210,10 @@ h1.section-two-header {
 .static {
   height: 60vw;
   z-index: 2;
-  transition: opacity 0.2s;
+  transition: opacity 0.3s;
+  -webkit-transition: opacity 0.3s;
+  -moz-transition: opacity 0.3s;
+  pointer-events: all;
 }
 @media (hover: hover) {
   .static-container:hover .static {
@@ -202,6 +221,10 @@ h1.section-two-header {
   }
   .static-container:hover .static-overlay {
     opacity: 1;
+  }
+  .static-container:hover .static-deployment,
+  .static-container:hover .static-repository {
+    transform: translateX(0);
   }
   .static-link:hover {
     background: rgb(0, 0, 75);
