--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -4,8 +4,11 @@
   justify-content: space-between;
   align-items: center;
   height: 100%;
-  user-select: none;
   margin-top: 20px;
+  user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
 }
 .section-divider {
   height: auto;
@@ -40,9 +43,7 @@
   line-height: 1.3;
   background: mediumseagreen;
   color: white;
-  -webkit-border-radius: 10px;
   border-radius: 10px;
-  -webkit-box-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
   box-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
   margin-bottom: 20px;
   padding: 15px;
@@ -174,8 +175,6 @@ h1.section-two-header {
   z-index: 4;
   overflow-x: hidden;
   transition: opacity 0.2s;
-  -webkit-transition: opacity 0.2s;
-  -moz-transition: opacity 0.2s;
 }
 .static-link {
   width: 35%;
@@ -192,27 +191,24 @@ h1.section-two-header {
 .static-deployment {
   transform: translateX(-200%);
   transition: transform 0.3s ease, background-color 0.2s, color 0.2s;
-  -webkit-transition: transform 0.3s ease, background-color 0.2s, color 0.2s;
-  -moz-transition: transform 0.3s ease, background-color 0.2s, color 0.2s;
 }
 .static-repository {
   transform: translateX(200%);
   transition: transform 0.3s ease, background-color 0.2s, color 0.2s;
-  -webkit-transition: transform 0.3s ease, background-color 0.2s, color 0.2s;
-  -moz-transition: transform 0.3s ease, background-color 0.2s, color 0.2s;
 }
 .static-link a {
   text-decoration: none;
 }
 .static-header {
   user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
 }
 .static {
   height: 60vw;
   z-index: 2;
   transition: opacity 0.3s;
-  -webkit-transition: opacity 0.3s;
-  -moz-transition: opacity 0.3s;
   pointer-events: all;
 }
 @media (hover: hover) {
