--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,15 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300&display=swap");
 #root {
-  min-width: 100vw;
-  min-height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 html {
-  min-height: 100vh;
-  min-width: 100vw;
+  width: 100%;
+  height: 100%;
+  scroll-behavior: smooth;
 }
 body {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-  background: linear-gradient(
-    300deg,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(100, 100, 100, 0.2) 100%
-  );
   background-repeat: no-repeat;
   box-sizing: border-box;
   overflow-x: hidden;
@@ -24,155 +20,36 @@ body {
 section {
   width: 100%;
 }
-.btn {
-  display: inline-block;
-  border: none;
-  background: black;
-  color: white;
-  padding: 0.75rem 1.5rem;
-  margin-top: 1rem;
-  transition: opacity 1s ease-out-out;
-  text-decoration: none;
-}
-.btn:hover {
-  opacity: 0.7;
-}
-/* MENU STYLES */
-.menu-wrap {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 5;
-}
-.menu-wrap .toggler {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 2;
-  cursor: pointer;
-  width: 62px;
-  height: 62px;
-  opacity: 0;
-}
-.menu-wrap .hamburger {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  width: 30px;
-  height: 30px;
-  padding: 1rem;
-  background: black;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-/* Hamburger Line */
-.menu-wrap .hamburger > div {
-  position: relative;
-  flex: none;
+.navbar-container {
   width: 100%;
-  height: 2px;
-  background: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.2s ease;
-}
-/* Hamburger Lines - Top & Bottom */
-.menu-wrap .hamburger > div::before,
-.menu-wrap .hamburger > div::after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  top: -10px;
-  width: 100%;
-  height: 2px;
-  background: inherit;
-}
-/* Moves Line Down */
-.menu-wrap .hamburger > div::after {
-  top: 10px;
-}
-/* Toggler Animation */
-.menu-wrap .toggler:checked + .hamburger > div {
-  transform: rotate(135deg);
-}
-/* Turns Lines Into X */
-.menu-wrap .toggler:checked + .hamburger > div:before,
-.menu-wrap .toggler:checked + .hamburger > div:after {
-  top: 0;
-  transform: rotate(90deg);
-}
-/* Rotate On Hover When Checked */
-.menu-wrap .toggler:checked:hover + .hamburger > div {
-  transform: rotate(225deg);
-}
-/* Show Menu */
-.menu-wrap .toggler:checked ~ .menu {
-  visibility: visible;
-}
-.menu-wrap .toggler:checked ~ .menu > div {
-  transform: scale(1);
-  transition: 0.2s ease;
-  height: 116%;
-}
-.menu-wrap .toggler:checked ~ .menu > div > div {
-  opacity: 1;
-  transition: opacity 0.2s ease 0.2s;
-}
-.menu-wrap .menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  visibility: hidden;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.menu-wrap .menu > div {
-  background: rgba(0, 0, 0, 0.8);
-  border-radius: 50%;
-  width: 200vw;
-  height: 200vw;
-  display: flex;
-  flex: none;
-  align-items: center;
-  justify-content: center;
-  transform: scale(0);
-  transition: all 0.2s ease;
-}
-.menu-wrap .menu > div > div {
-  text-align: center;
-  max-width: 90vw;
-  max-height: 100vh;
-  opacity: 0;
-  transition: opacity 0.2s ease;
-}
-.menu-list {
   display: flex;
   flex-direction: column;
-  text-align: center;
+  background: rgb(0, 26, 98);
+  z-index: 4;
 }
-.menu-item {
-  font-family: "Montserrat", sans-serif;
-  font-size: 2rem;
-  font-weight: 200;
-  text-decoration: none;
-  color: white;
-  margin: 30px 0;
+.scrollnav-container {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: rgb(0, 26, 98);
+  z-index: 3;
 }
 .navbar {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   user-select: none;
-  margin: 10px 15px 0 15px;
+  margin: 0 auto;
   transition: 0.2s ease-out;
+  box-shadow: 0px 4px goldenrod;
+  height: 40px;
+  width: 100%;
+}
+.navbar-shadow {
+  height: 4px;
+  width: 100%;
+  background: goldenrod;
 }
 .nav-link-container {
   display: flex;
@@ -193,8 +70,8 @@ section {
   font-weight: normal;
   text-align: center;
   text-decoration: none;
-  color: black;
-  margin: 0 15px;
+  color: white;
+  margin: 0 5vw;
 }
 .nav-link::after {
   display: block;
@@ -207,7 +84,7 @@ section {
   width: 0px;
   height: 1px;
   display: block;
-  background: tomato;
+  background: goldenrod;
   transition: 0.2s ease-out;
   margin: 0 auto;
 }
@@ -217,22 +94,6 @@ section {
     transition: 0.2s ease-out;
   }
   .nav-link:hover {
-    color: crimson;
-  }
-}
-@media only screen and (max-width: 768px) {
-  .navbar {
-    visibility: hidden;
-  }
-  .menu-wrap {
-    visibility: visible;
-  }
-}
-@media only screen and (min-width: 769px) {
-  .navbar {
-    visibility: visible;
-  }
-  .menu-wrap {
-    visibility: hidden;
+    color: goldenrod;
   }
 }
