--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -4,17 +4,10 @@
   justify-content: space-between;
   align-items: center;
   height: 100%;
-  margin-top: 20px;
   user-select: none;
   -ms-user-select: none;
   -moz-user-select: none;
   -webkit-user-select: none;
-}
-.section-divider {
-  height: auto;
-  min-width: 50px;
-  max-width: 30vw;
-  max-height: 50px;
 }
 #section-one {
   display: flex;
@@ -28,36 +21,49 @@
   justify-content: center;
   align-items: center;
   font-size: 1.1rem;
-  padding: 15px 0;
+  /* padding: 15px 0; */
   white-space: normal;
-  box-shadow: 0px 7px 10px -10px rgba(0, 0, 0, 0.5);
+  color: white;
+  overflow-x: hidden;
+  min-height: 50%;
+}
+.about-intro {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(rgb(0, 11, 70) 0%, rgb(0, 26, 98) 25%);
+  width: 100%;
+  height: 100%;
+  padding: 100px 0;
+  z-index: 4;
 }
 .profile-figure {
   text-align: center;
-  width: 250px;
   margin: 0;
 }
 .about-summary {
   position: relative;
   font-size: 1.25rem;
   line-height: 1.3;
-  background: mediumseagreen;
-  color: white;
+  border: 3px solid goldenrod;
+  color: rgb(255, 200, 50);
   border-radius: 10px;
-  box-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
-  margin-bottom: 20px;
-  padding: 15px;
-  width: 270px;
+  margin-bottom: 0px;
+  padding: 12px;
+  width: 80%;
+  max-width: 330px;
 }
 .speech-arrow {
   border-right: 21px solid transparent;
-  border-top: 20px solid rgba(0, 0, 0, 0.2);
+  border-top: 20px solid transparent;
   bottom: -25px;
+  right: 30px;
   position: absolute;
 }
 .speech-arrow::before {
   border-right: 27px solid transparent;
-  border-top: 23px solid rgb(180, 180, 180);
+  border-top: 23px solid transparent;
   bottom: 2px;
   content: "";
   position: absolute;
@@ -65,7 +71,7 @@
 }
 .speech-arrow::after {
   border-right: 21px solid transparent;
-  border-top: 21px solid mediumseagreen;
+  border-top: 21px solid goldenrod;
   bottom: 4px;
   content: "";
   position: absolute;
@@ -94,7 +100,8 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  background: rgba(0, 162, 255, 0.08);
+  background: white;
+  z-index: 4;
 }
 .skills-container {
   display: flex;
@@ -143,7 +150,19 @@
 #section-two {
   display: flex;
   flex-direction: column;
+  align-items: center;
   text-align: center;
+  background: linear-gradient(
+    300deg,
+    rgb(255, 255, 255) 0%,
+    rgb(220, 220, 220) 50%
+  );
+}
+.section-divider {
+  height: auto;
+  min-width: 50px;
+  max-width: 30vw;
+  max-height: 50px;
 }
 h1.section-two-header {
   font-size: 36px;
@@ -172,7 +191,7 @@ h1.section-two-header {
   align-items: center;
   width: 100%;
   opacity: 0;
-  z-index: 4;
+  z-index: 2;
   overflow-x: hidden;
   transition: opacity 0.2s;
 }
@@ -190,11 +209,11 @@ h1.section-two-header {
 }
 .static-deployment {
   transform: translateX(-200%);
-  transition: transform 0.3s ease, background-color 0.2s, color 0.2s;
+  transition: transform 0.3s ease, background-color 0.2s ease, color 0.2s ease;
 }
 .static-repository {
   transform: translateX(200%);
-  transition: transform 0.3s ease, background-color 0.2s, color 0.2s;
+  transition: transform 0.3s ease, background-color 0.2s ease, color 0.2s ease;
 }
 .static-link a {
   text-decoration: none;
@@ -207,7 +226,6 @@ h1.section-two-header {
 }
 .static {
   height: 60vw;
-  z-index: 2;
   transition: opacity 0.3s;
   pointer-events: all;
 }
@@ -263,19 +281,6 @@ h1.section-two-header {
   }
 }
 @media only screen and (min-width: 769px) and (max-width: 1199px) {
-  .about-section {
-    display: flex;
-    flex-direction: row-reverse;
-  }
-  .about-summary {
-    bottom: 125px;
-  }
-  .speech-arrow {
-    left: 10px;
-  }
-  .profile-figure {
-    margin-top: 100px;
-  }
   .skills-container {
     max-width: 955px;
   }
@@ -304,23 +309,6 @@ h1.section-two-header {
   }
 }
 @media only screen and (min-width: 1200px) {
-  .about-section {
-    display: flex;
-    flex-direction: row-reverse;
-  }
-  .about-summary {
-    font-size: 1.5rem;
-    width: 550px;
-  }
-  .about-summary {
-    bottom: 135px;
-  }
-  .speech-arrow {
-    left: 10px;
-  }
-  .profile-figure {
-    margin-top: 75px;
-  }
   .skills-container {
     max-width: 1200px;
   }
