--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -274,7 +274,7 @@ h1.section-two-header {
 .profile-container {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   height: 90vh;
   padding: 30px 0 0 0;
